--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,10 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>task-tracker</name>
 
-  <properties>
-    <maven.compiler.release>21</maven.compiler.release>
-  </properties>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
   <dependencies>
 
