--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,9 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>task-tracker</name>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
+  <properties>
+    <maven.compiler.release>17</maven.compiler.release>
+  </properties>
 
   <dependencies>
 
